envoy-app.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9191
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              stat_prefix: http_proxy
              route_config: 
                name: all
                virtual_hosts:
                  - name: app_cluster
                    domains: 
                      - '*'
                    routes:
                      - match: { prefix: "/"}
                        route:
                          cluster: app_cluster
              http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: app_cluster
      connect_timeout: 25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: app_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: app1
                    port_value: 8080
